--- a/example.env
+++ b/example.env
@@ -1,3 +1,3 @@
-DATABASE_CONNECTION_STRING = mongodb+srv://rango:wUDPbtLUp7ZDQZQr@cluster0.2bxued0.mongodb.net/mahakal_db?retryWrites=true&w=majority
+DATABASE_CONNECTION_STRING = <connection string>
 
-REMOTE = example.com
+REMOTE = <example.com>
