--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "mongoose": "^8.1.1",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
+        "nodemailer": "^6.9.9",
         "promisify": "0.0.3",
         "util": "^0.12.5",
         "validator": "^13.11.0",
