--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "dependencies": {
         "@babel/polyfill": "^7.12.1",
+        "axios": "^1.6.7",
         "compression": "^1.7.4",
         "cors": "^2.8.5",
         "date": "^2.0.4",
