--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "multer": "^1.4.5-lts.1",
         "nodemailer": "^6.9.9",
         "promisify": "0.0.3",
+        "puppeteer": "^22.1.0",
         "util": "^0.12.5",
         "validator": "^13.11.0",
         "xss-clean": "^0.1.1"
