video and gallery api

--- a/.env
+++ b/.env
@@ -13,5 +13,5 @@ EMAIL_PORT = 587
 ADMIN_EMAIL = mitesh96625@gmail.com
 
 
-PHONEPAY_MERCHANT_ID = PGTESTPAYUAT
+PHONEPAY_MERCHANT_ID = STANDARDUAT
 PHONEPAY_SALT_KEY = 099eb0cd-02cf-4e2a-8aca-3e6c6aff0399
